[gd_scene load_steps=5 format=3 uid="uid://2yvdod84q2jt"]

[ext_resource type="Script" uid="uid://bj7wuu07e6tvi" path="res://scenes/enemies/enemy_basic.gd" id="1_6xk8f"]
[ext_resource type="PackedScene" uid="uid://dnw7ji3nugbqw" path="res://scenes/weapons/sound_wave.tscn" id="2_8e3ao"]
[ext_resource type="PackedScene" uid="uid://4wf4v0ofyd7h" path="res://scenes/ui/enemy_health_bar.tscn" id="3_rgfb6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ykcao"]
radius = 6.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_6xk8f")
wave_scene = ExtResource("2_8e3ao")

[node name="BodySprite" type="ColorRect" parent="."]
offset_left = -6.0
offset_top = -12.0
offset_right = 6.0
offset_bottom = 12.0
color = Color(0.8745098, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_ykcao")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HealthBarPosition" type="Node2D" parent="."]
position = Vector2(8, 0)

[node name="enemy_health_bar" parent="HealthBarPosition" instance=ExtResource("3_rgfb6")]
